--- a/train_val_test/config/kinetics/kinetics_dsta.yaml
+++ b/train_val_test/config/kinetics/kinetics_dsta.yaml
@@ -1,8 +1,8 @@
-data: 'ntu_skeleton'
+data: 'kinetics_skeleton'
 data_param:
   train_data_param:
-    data_path: /your/path/to/Kinetics/DSTA/xsub/train_data_joint.npy
-    label_path: /your/path/to/Kinetics/DSTA/xsub/train_label.pkl
+    data_path: /your/path/to/Kinetics/DSTA/train_data_joint.npy
+    label_path: /your/path/to/Kinetics/DSTA/train_label.pkl
     random_choose: True
     center_choose: False
     window_size: 150
@@ -10,8 +10,8 @@ data_param:
     num_skip_frame:
     decouple_spatial: False
   val_data_param:
-    data_path: /your/path/to/Kinetics/DSTA/xsub/val_data_joint.npy
-    label_path: /your/path/to/Kinetics/DSTA/xsub/val_label.pkl
+    data_path: /your/path/to/Kinetics/DSTA/val_data_joint.npy
+    label_path: /your/path/to/Kinetics/DSTA/val_label.pkl
     random_choose: False
     center_choose: True
     window_size: 150
@@ -23,10 +23,11 @@ data_param:
 model: 'st2ransformer_dsta'
 class_num: 400
 model_param:
-  num_point: 25
+  num_point: 18
   num_frame: 128
   num_subset: 8
-  num_person: 2
+  num_person: 1
+  num_channel: 2
   glo_reg_s: True
   att_s: True
   glo_reg_t: False
